<?xml version="1.0" encoding="utf-8"?>

<!--
 Copyright (c) 2014 Amlogic, Inc. All rights reserved.

 This source code is subject to the terms and conditions defined in the
 file 'LICENSE' which is part of this source code package.

 Description:
-->

<resources>
    <string name="app_name">Hdmi In</string>
    <string name="settings_activity">HDMIIN</string>
    <string name="full_activity">FullActivity</string>
    <string name="pip_activity">PipActivity</string>
    <string name="switchfull_activity">FullActivity</string>
    <string name="menu_settings">Settings</string>
    <string name="hdmi_in_settings">HDMI IN settings</string>
    <string name="hdmi_in_source_choose">Choose input source:</string>
    <string name="hdmi_in_3">HDMI 4</string>
    <string name="hdmi_in_2">HDMI 3</string>
    <string name="hdmi_in_1">HDMI 2</string>
    <string name="hdmi_in_0">HDMI 1</string>
    <string name="discard">Discard</string>
    <string name="confirm">Confirm</string>

    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="quit">Quit</string>
    <string name="full">Full</string>
    <string name="pip">Pip</string>
</resources>
