<?xml version="1.0" encoding="utf-8"?>

<!--
 Copyright (c) 2014 Amlogic, Inc. All rights reserved.

 This source code is subject to the terms and conditions defined in the
 file 'LICENSE' which is part of this source code package.

 Description:
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="8dip"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <TextView android:id="@+id/hdmi_in_source_choose_text"
            style="?android:attr/textAppearanceSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dip"
            android:text="@string/hdmi_in_source_choose" />

        <RadioGroup android:id="@+id/source_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <RadioButton android:id="@+id/hdmi_in_3_btn"
                style="?android:attr/textAppearanceSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/hdmi_in_3" />
            <RadioButton android:id="@+id/hdmi_in_2_btn"
                style="?android:attr/textAppearanceSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/hdmi_in_2" />
            <RadioButton android:id="@+id/hdmi_in_1_btn"
                style="?android:attr/textAppearanceSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/hdmi_in_1" />
            <RadioButton android:id="@+id/hdmi_in_0_btn"
                style="?android:attr/textAppearanceSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/hdmi_in_0" />
        </RadioGroup>

        <!-- <LinearLayout
            sytle="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:measureWithLargestChild="true">
            <Button android:id="@+id/discard_btn"
                Style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/discard" />
            <Button android:id="@+id/confirm_btn"
                Style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/confirm" />
        </LinearLayout> -->

    </LinearLayout>

</ScrollView>
